Fix #32755: Stripes in Metastrip can not be moved on other channel with mouse (grab tool)

The issue was caused by SEQ_BEGIN macro modifying sequence's depth
which ruined transformation routines. Used own DFS instead which
doesn't modify sequences.

Also corrected some typos in api and comments.